--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,10 @@ jobs:
         
       # run tests!
       - run: phpunit
+     
+workflows:
+  version: 2
+  
+my_workflows:
+  jobs:
+    -build
